# PINN-wss

./: .gitignore  README.md  pyproject.toml
1D-advection-diffusion/: myPINN_1d_nwall2.py
2D-aneurysm/: IA_NSdata.py
2D-stenosis/: stenosis_NSdata.py
3D-aneurysm/: IA3D_NSdata2_vel3_small.py
scripts/: data_loader.py  evaluate.py  model.py  train.py
